--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body, html {
   .hero {
     position: relative;
     height: 100vh;
-    background: url('/assets/BOTB-Logo.png') no-repeat center center/cover;
+    background: url('uploads/assets/BOTB-Logo.png') no-repeat center center/cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -73,7 +73,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('/assets/BOTB-Logo.png') no-repeat center center/cover;
+    background: url('uploads/assets/BOTB-Logo.png') no-repeat center center/cover;
     z-index: -1;
     opacity: 1;
     transition: opacity 0.5s ease;
