--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body, html {
   width: 25px;
   position: absolute; /* Make it easier to adjust the position */
   top: 10px;
-  right: 10px; /* Adjust this value to move the dashed lines to the left */
+  left: 30px; /* Adjust this value to move the dashed lines to the left */
 }
 
 
