--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body, html {
   padding: 10px 20px;
   background-color: #333;
   color: #fff;
-  position: fixed; /* Make the navbar sticky */
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
@@ -27,6 +27,7 @@ body, html {
   font-size: 18px;
 }
 
+/* Adjusting the position of the menu toggle */
 .nav-right .menu-toggle {
   cursor: pointer;
   display: flex;
@@ -34,8 +35,11 @@ body, html {
   justify-content: space-between;
   height: 20px;
   width: 25px;
+  position: relative;
+  right: 27px;
 }
 
+/* Styling for the three bars of the menu toggle */
 .nav-right .menu-toggle .bar {
   width: 100%;
   height: 4px;
@@ -43,15 +47,17 @@ body, html {
   border-radius: 2px;
 }
 
+/* Dropdown menu styles */
 .nav-right .dropdown-menu {
   display: none;
   position: absolute;
   top: 50px;
-  right: 20px;
+  right: 27px;
   background-color: #333;
   list-style-type: none;
   padding: 10px 0;
   border-radius: 5px;
+  z-index: 1000;
 }
 
 .nav-right .dropdown-menu li {
@@ -68,10 +74,12 @@ body, html {
   background-color: #555;
 }
 
-.nav-right .menu-open .dropdown-menu {
+/* Show dropdown menu on hover */
+.nav-right .menu-toggle:hover + .dropdown-menu {
   display: block;
 }
 
+/* Background color change on scroll */
 body.scrolled .navbar {
   background-color: #444; /* Darker background when scrolled */
 }
