--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,6 @@ body, html {
   font-size: 18px;
 }
 
-/* Adjusting the position of the menu toggle */
 .nav-right .menu-toggle {
   cursor: pointer;
   display: flex;
@@ -36,10 +35,9 @@ body, html {
   height: 20px;
   width: 25px;
   position: relative;
-  right: 27px;
+  right: 27px; /* Adjust this value to move the dashed lines to the left */
 }
 
-/* Styling for the three bars of the menu toggle */
 .nav-right .menu-toggle .bar {
   width: 100%;
   height: 4px;
@@ -47,17 +45,20 @@ body, html {
   border-radius: 2px;
 }
 
-/* Dropdown menu styles */
 .nav-right .dropdown-menu {
   display: none;
   position: absolute;
   top: 50px;
-  right: 27px;
+  right: 27px; /* Align with the right side of the menu toggle */
   background-color: #333;
   list-style-type: none;
   padding: 10px 0;
   border-radius: 5px;
   z-index: 1000;
+}
+
+.nav-right .dropdown-menu.menu-open {
+  display: block;
 }
 
 .nav-right .dropdown-menu li {
@@ -74,15 +75,11 @@ body, html {
   background-color: #555;
 }
 
-/* Show dropdown menu on hover */
-.nav-right .menu-toggle:hover + .dropdown-menu {
-  display: block;
-}
-
-/* Background color change on scroll */
 body.scrolled .navbar {
   background-color: #444; /* Darker background when scrolled */
 }
+
+
 
 /* Hero Section */
 .hero {
